--- a/index.html
+++ b/index.html
@@ -62,13 +62,61 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+</style>
+
+<script>
+  const secondHand = document.querySelector('.second-hand');
+  const minHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+  function resetHand(hand) {
+    hand.style.transition = 'unset'
+    hand.style.transform = 'rotate(90deg)'
+    setTimeout(() => {
+      hand.style.transition = ''
+    })
+  }
+
+  function setDate() {
+    const now = new Date()
+
+    const seconds = now.getSeconds()
+    const secondsDegrees = ((seconds / 60) * 360) + 90
+    if(seconds === 0) {
+      secondHand.style.transform = `rotate(${secondsDegrees + 360}deg)`
+      secondHand.addEventListener('transitionend', resetHand(secondHand))
+    } else {
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`
     }
 
-  </style>
+    const mins = now.getMinutes()
+    const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90
+    if(mins === 0) {
+      minHand.style.transform = `rotate(${minsDegrees + 360}deg)`
+      minHand.addEventListener('transitionend', resetHand(minHand))
+    } else {
+      minHand.style.transform = `rotate(${minsDegrees}deg)`
+    }
 
-  <script>
+    const hour = now.getHours()
+    const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90
+    if(mins === 0) {
+      hourHand.style.transform = `rotate(${hourDegrees + 360}deg)`
+      hourHand.addEventListener('transitionend', resetHand(hourHand))
+    } else {
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`
+    }
+  }
 
+  setInterval(setDate, 1000)
 
-  </script>
+  setDate()
+
+</script>
 </body>
 </html>
